UI fixes and Login Page